# tableizer

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  justfile
.github/workflows/: ci.yml
assets/: README.md  icon.icns
crates/tableizer/: Cargo.toml
crates/tableizer-core/: Cargo.toml
crates/tableizer-core/examples/: bench_load.rs  gen_csv.rs
crates/tableizer-core/src/: cache.rs  cancel.rs  error.rs  export.rs  gzip.rs  index.rs  json.rs  lib.rs  ndjson.rs  parquet.rs  parse.rs  remote.rs  search.rs  sort.rs  source.rs  table.rs  viewport.rs
crates/tableizer/src/: app.rs  fonts.rs  macos_open.rs  main.rs  model.rs  persist.rs  theme.rs
crates/tableizer/src/ui/: grid.rs  menu.rs  mod.rs  settings.rs
docs/: architecture.md  formats.md  spec.md  todo.md
scripts/: package-macos.sh
