[package]
name = "tableizer-core"
description = "Tableizer data engine: byte-faithful parsing, out-of-core indexing, search, and sort."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
arrow = "59.0.0"
aws-config = { version = "1.8.18", features = ["sso"] }
aws-credential-types = "1.2.14"
# Drop the default `rustls` feature: it pulls the SDK's *legacy* rustls 0.21 client (vulnerable
# rustls-webpki 0.101 — RUSTSEC-2026-0098/0099/0104). `default-https-client` is the modern stack,
# the same one `aws-config` defaults to.
aws-sdk-s3 = { version = "1.137.0", default-features = false, features = [
    "default-https-client",
    "rt-tokio",
    "sigv4a",
    "http-1x",
] }
csv = "1.4.0"
directories = "6.0.0"
encoding_rs = "0.8.35"
flate2 = "1.1.9"
futures = "0.3.32"
memchr = "2.8.2"
memmap2 = "0.9.11"
object_store = { version = "0.14.0", features = ["aws", "gcp", "azure", "http"] }
parquet = "59.0.0"
regex = "1.12.4"
# preserve_order: NDJSON columns follow first-seen object-key order, not serde_json's default
# alphabetical sort (which would shuffle the table's columns relative to the source).
serde_json = { version = "1.0.150", features = ["preserve_order"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "net", "time"] }
url = "2.5.8"
# thiserror added via `cargo add`.

# Engine dependency spine (add each as the corresponding module is implemented, so there are no
# unused dependencies — see docs/architecture.md):
#   csv, csv-core   — RFC 4180 byte-faithful parsing / streaming record boundaries
#   memmap2         — memory-mapped reads (guarded; see §4.2)
#   encoding_rs     — BOM-aware decoding (UTF-8/16, Latin-1, Windows-1252)
#   regex           — linear-time, ReDoS-safe search (NEVER fancy-regex)
#   memchr          — fast literal substring search / newline (NDJSON record) boundaries
#   serde_json      — NDJSON value parsing (the nested format-reader seam, §4.5)
#   arrow, parquet  — Parquet decode + Arrow value rendering (the columnar seam, §4.5); per §4.3
#                     their decode/interchange may be reused but the external sort stays ours
#   rayon           — data-parallel index build / external-sort run generation

[dev-dependencies]
tempfile = "3.27.0"
# proptest        — round-trip / fidelity property tests (add with the parser)
