[package]
name = "tableizer"
description = "Tableizer cross-platform desktop shell (winit + wgpu + egui)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "tableizer"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ab_glyph = "0.2.32"
directories = "6.0.0"
eframe = { version = "0.34.3", features = ["persistence"] }
egui_table = "0.8.0"
encoding_rs = "0.8.35"
fontdb = "0.23.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tableizer-core = { path = "../tableizer-core" }

[dev-dependencies]
tempfile = "3.27.0"

# macOS file-open (kAEOpenDocuments) receiver — see src/macos_open.rs.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSAppleEventManager",
    "NSAppleEventDescriptor",
    "NSString",
    "NSURL",
    "objc2-core-services",
] }
objc2-core-foundation = { version = "0.3", features = ["CFRunLoop"] }
# eframe added via `cargo add` (the winit + wgpu + egui desktop runtime).
